--- a/Ensemble_Modelos.ipynb
+++ b/Ensemble_Modelos.ipynb
@@ -36,7 +36,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#!pip install xgboost\n",
+        "#!pip install lightgbm\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -44,21 +54,7 @@
         "id": "nEACW5elYW-1",
         "outputId": "e80dae0c-cc73-4cfc-be77-c7c3c1a9c4f5"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/dask/dataframe/__init__.py:42: FutureWarning: \n",
-            "Dask dataframe query planning is disabled because dask-expr is not installed.\n",
-            "\n",
-            "You can install it with `pip install dask[dataframe]` or `conda install dask`.\n",
-            "This will raise in a future version.\n",
-            "\n",
-            "  warnings.warn(msg, FutureWarning)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -78,7 +74,7 @@
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n",
         "import warnings\n",
-        "warnings.filterwarnings('ignore')"
+        "warnings.simplefilter(action='ignore', category=FutureWarning)"
       ]
     },
     {
@@ -2064,7 +2060,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.13"
     }
   },
   "nbformat": 4,
